# ragchatbot-experiment

./: .gitignore  README copy.md  pyproject.toml
src/myragchatbot/app/: main.py
src/myragchatbot/core/: prompt_template.py  query_engine.py
src/myragchatbot/embeddings/: embedder_factory.py
src/myragchatbot/evaluation/: rerank_evaluator.py
src/myragchatbot/internet_search/: tavily_search.py
src/myragchatbot/llm_backends/: gemini_llm.py  mistral_llm.py  ollama_llm.py  openai_llm.py
src/myragchatbot/loaders/: document_processor.py  pdf_loader.py  text_loader.py
src/myragchatbot/rerankers/: cohere_reranker.py
vectorstore/: chroma.sqlite3
